# LibBsdiff

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kw/lib/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kw/update/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libbsdiff/: CMakeLists.txt  build.gradle  proguard-rules.pro
libbsdiff/src/androidTest/java/com/kw/lib/bsdiff/: ExampleInstrumentedTest.java
libbsdiff/src/main/: AndroidManifest.xml
libbsdiff/src/main/cpp/: bsdiff.c  bspatch.c  logutils.h  mystdio.h  native-lib.c  native-lib.h
libbsdiff/src/main/cpp/bzip2/: bzip2.c  bzip2recover.c  bzlib.h  bzlib_private.h
libbsdiff/src/main/cpp/gnu/: Android.mk  __fpending.c  __fpending.h  alloca.h  allocsa.h  argmatch.c  argmatch.h  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-parse.c  asnprintf.c  basename.c  chdir-long.c  chown.c  close-stream.c  config.h  configmake.h  dirname.c  dirname.h  dup-safer.c  error.c  exclude.c  fcntl_.h  fnmatch.c  ftruncate.c  full-write.c  full-write.h  getcwd.c  getdate.c  getdelim.h  gettext.h  human.c  inttypes.h  inttypes_.h  libgnu.mk  localcharset.c  memchr.c  memset.c  mkdtemp.c  (+41 more)
libbsdiff/src/main/cpp/tar/: Makefile.am  arith.h  buffer.c  checkpoint.c  common.h  compare.c  create.c  delete.c  exclist.c  exit.c  extract.c  incremen.c  list.c  map.c  misc.c  names.c  sparse.c  suffix.c  system.c  tar.c  tar.h  transform.c  unlink.c  update.c  utf8.c  warning.c  xattrs.c  xattrs.h  xheader.c
libbsdiff/src/main/java/com/kw/lib/bsdiff/: BsdiffUtils.java
libbsdiff/src/test/java/com/kw/lib/bsdiff/: ExampleUnitTest.java
